# rust-web-api-boilerplate

./: .env  .env-example  Cargo.toml  README.md  docker-compose.yml  rustfmt.toml
src/: lib.rs  main.rs  modules.rs
src/configs/: mod.rs
src/constants/: mod.rs
src/constants/services/: mod.rs  service_errors.rs
src/controllers/: auth_controller.rs  lessons_controller.rs  mod.rs  todo_controller.rs  user_controller.rs
src/framework/: mod.rs
src/framework/database/: mod.rs
src/framework/shared/: input_validator.rs  mod.rs  response_generator.rs
src/framework/shared/responser/: mod.rs  response_generator.rs  responser_models.rs
src/framework/utils/: helpers.rs
src/middlewares/: auth_middleware.rs
src/models/: auth_model.rs  mod.rs  todo_model.rs  user_model.rs
src/repositories/: lessons_repository.rs  mod.rs  todo_repository.rs  user_repository.rs
src/routes/: lessons_routes.rs  user_routes.rs
src/routes/v1/: lessons_routes.rs  mod.rs  todo_routes.rs  user_routes.rs
src/routes/v2/: mod.rs  user_routes.rs
src/services/: auth_service.rs  lesson_service.rs  lessons_services.rs  mod.rs  roles_services.rs  todo_service.rs  unit_services.rs  user_service.rs  users_services.rs
tests/: controller_test.rs  controllers.rs  http_test.rs  todo_test.rs
