[package]
name = "admin-backend"
version = "0.1.0"
edition = "2021"
authors = ["Yusuf Caliskan <yusufocaliskan@gmail.com>"]
license = "MIT"
description = "the ziwonify backend service for admin operations"
repository = "https://github.com/ziwonify/admin-backend"
keywords = ["ziwonify", "rust", "backend", "actix"]


[dependencies]
mongodb = "3.1.1"
tokio = { version = "1.42.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4.39", features = ["serde"] }
actix = "0.13.5"
actix-web = "4.9.0"
actix-cors = "0.7.0"
actix-service = "2.0.2"
actix-http = "3.9.0"
uuid = "1.11.0"
dotenv = "0.15.0"
env_logger = "0.11.6"
failure = "0.1.8"
futures = "0.3.31"
http = "1.2.0"
jsonwebtoken = "9.3.0"
lazy_static = "1.5.0"
libreauth = "0.17.0"
regex = "1.11.1"
serde_derive = "1.0.217"
serde_json = "1.0.134"
validator = "0.19.0"
validator_derive = "0.19.0"
bson = "2.13.0"
shaku = "0.6.2"
shaku_actix = "0.2.0"
colored = "2.2.0"
mobc = "0.8.5"
argon2 = "0.5.3"
async-trait = "0.1.85"
tower = "0.5.2"
tower-http = "0.6.2"
httpc-test = "0.1.10"
anyhow = "1.0.95"
thiserror = "2.0.11"
actix-web-httpauth = "0.8.2"
